--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="and5.abrar.challenge_ch8">
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
+        android:name=".view.AnimeApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -14,25 +15,26 @@
         android:theme="@style/Theme.Challengech8"
         tools:targetApi="31">
         <activity
-            android:name=".DetailLayout"
+            android:name=".view.DetailLayout"
             android:exported="false"
             android:label="@string/title_activity_detail_layout"
             android:theme="@style/Theme.Challengech8" />
         <activity
-            android:name=".HomeLayout"
+            android:name=".view.HomeLayout"
             android:exported="false"
             android:label="@string/title_activity_home_layout"
             android:theme="@style/Theme.Challengech8" />
         <activity
-            android:name=".RegisterLayout"
+            android:name=".view.RegisterLayout"
             android:exported="false"
             android:label="@string/title_activity_register_layout"
             android:theme="@style/Theme.Challengech8" />
         <activity
-            android:name=".LoginLayout"
+            android:name=".view.LoginLayout"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Challengech8">
+            android:theme="@style/Theme.Challengech8"
+            tools:ignore="RedundantLabel">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
