--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ android {
 
 dependencies {
 
+    //noinspection GradleDependency
     implementation 'androidx.core:core-ktx:1.7.0'
     //noinspection GradleDependency
     implementation "androidx.compose.ui:ui:$compose_version"
